--- a/recipe.html
+++ b/recipe.html
@@ -6,7 +6,7 @@
   <body>
   <h1> Recipes </h1>
   <ul>
-    <li><a href="ndex.php" target="_blank"> HOME </a></li>
+    <li><a href="index.php" target="_blank"> HOME </a></li>
     <li><a href="EggfriedRice.html" target= "_blank"> Egg Fried Rice </a> </li>
     <li><a href="PadThaiChicken.html" target= "_blank"> PadThaiChicken </a> </li>
     <li><a href="SimpleSpaghettiBolognaise.html" target= "_blank"> Basic Pasta </a> </li>
