--- a/Gallery.html
+++ b/Gallery.html
@@ -9,7 +9,7 @@
 			<header>
 				<div class="main">
 					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
+						<li class="active"><a href="CLE1MT.html">Home</a></li>
 						<li><a href="Solutions.html">Actions or Solutions</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="AboutUs.html">About us</a></li>
@@ -19,12 +19,12 @@
 		<h2> Gallery </h2>
 				<div class="row">
   					<div class="column">
-    					<img src="Images/what.jpg" width="650" height="650">
-    					<img src="Images/what2.jpg" width="650" height="650">
-    					<img src="Images/traffic.jpg" width="650" height="650">
-    					<img src="Images/kotong%20cop.jpg" width="650" height="650">
-    					<img src="Images/kotong.jpg" width="650" height="650">
-                        <img src="Images/kotong3.jpg" width="650" height="650">
+    					<img src="Images/what.jpg" width="700" height="700">
+    					<img src="Images/what2.jpg" width="700" height="700">
+    					<img src="Images/traffic.jpg" width="700" height="700">
+    					<img src="Images/kotong%20cop.jpg" width="700" height="700">
+    					<img src="Images/kotong.jpg" width="700" height="700">
+                        <img src="Images/kotong3.jpg" width="700" height="700">
     				</div>
   				</div>
 			<style>
