--- a/Gallery.html
+++ b/Gallery.html
@@ -10,7 +10,7 @@
 				<div class="main">
 					<ul>
 						<li class="active"><a href="CLE1MT.html">Home</a></li>
-						<li><a href="Solutions.html">Actions or Solutions</a></li>
+						<li><a href="Solutions.html">Actions</a></li>
 						<li><a href="gallery.html">Gallery</a></li>
 						<li><a href="AboutUs.html">About us</a></li>
 					</ul>
