--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,7 +9,7 @@
 			<header>
 				<div class="main">
 					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
+						<li class="active"><a href="CLE1MT.html">Home</a></li>
 						<li><a href="Solutions.html">Actions or Solutions</a></li>
 						<li><a href="Gallery.html">Gallery</a></li>
 						<li><a href="AboutUs.html">About us</a></li>
