--- a/Solutions.html
+++ b/Solutions.html
@@ -9,8 +9,8 @@
 			<header>
 				<div class="main">
 					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="Solutions.html">Actions or Solutions</a></li>
+						<li class="active"><a href="CLE1MT.html">Home</a></li>
+						<li><a href="Solutions.html">Actions</a></li>
 						<li><a href="Gallery.html">Gallery</a></li>
 						<li><a href="AboutUs.html">About us</a></li>
 					</ul>
@@ -18,12 +18,6 @@
 			</header>
 			<h2> Solutions </h2>
 	<p>The Philippine's police system poses a high risk of corruption, with the Philippines National Police (PNP) considered to be one of the most corrupt institutions within the country.</p>
-	<h3> Public awareness </h3>
-	<p>Police corruption hurts both law enforcement and the community. Scandals, like the CRASH one, damage the police's public image and undermine a community's trust of law enforcement. Crime flourishes in these communities, because criminal activity is protected rather than abated. most of the Kotong crimes happens on the street with traffic enfocers</p>
-	<h3> The dept environment must be changed </h3>
-	<p> to emphasize an anti-corruption stance. This involves increased supervision of line officers, giving supervisors increased responsibility for combating corruption, and eliminating dept practices that encourage corruption (e.g., arrest quotas). to add to that enforcers would ticket you to every detail that you are missing just to reach their monthly qouta of tickets given</p>
-	<h3>the importance of self discipline</h3>
-	<p>Self-Control and Positive Relationships are Central to Support for Organizational Justice Amongst Police Managers. The data from our anonymous survey of command-level police officers reveals that police managers who reported higher levels of self-control were more supportive of organizational justice.</p>
 	<h3>Punishment for corruption</h3>
 	<p>Any public officer or private person committing any of the unlawful acts or omissions enumerated in Sections 3, 4, 5 and 6 of this Act shall be punished with imprisonment for not less than one year nor more than ten years, perpetual disqualification from public office, and confiscation or forfeiture of badge or any kind of identification that would relate them to being law enforcement. </p>
 	
@@ -46,10 +40,4 @@
 			}
 			</style>
 			<body>
-			<div class="footer">
-			  <p>© 2022, Kaiser Antolo.</p>
-			</div>
-			</body>
-		</style>
-	</body>
-</html>
+			
